--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
       <p>
         <br><a href="tel:+46736468868"><i class="bi bi-telephone-fill"></i><br>+46 73 646 8868</a><br>
         <br><a href="mailto:ronning.elia01@gmail.com"><i class="bi bi-envelope-fill"></i><br>ronning.elia01@gmail.com</a><br>
-        <br><a href="https://www.linkedin.com/in/elia-r%C3%B6nning-6804a2221/" target="_blank"><i class="bi bi-linkedin"></i><br>Elia Rönning</a><br>
+        <br><a href="https://www.linkedin.com/in/elia-ronning/" target="_blank"><i class="bi bi-linkedin"></i><br>Elia Rönning</a><br>
         <br><a href="https://github.com/GesturTheViking" target="_blank"><i class="bi bi-github"></i><br>GesturTheViking</a><br>
       </p>
     </div>
@@ -348,7 +348,7 @@
       <p>Game Programmer</p>
       <div class="social-links">
         <a href="https://github.com/GesturTheViking" class="github" target="_blank"><i class="bx bxl-github"></i></a>
-        <a href="https://www.linkedin.com/in/elia-r%C3%B6nning-6804a2221/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/elia-ronning/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
