--- a/ecs.html
+++ b/ecs.html
@@ -232,6 +232,7 @@ inline void ComponentList&lt;ComponentType&gt;::RemoveComponent(Entity anEntity)
         <div class="iframe-container">
           <iframe src="game.html" width="800" height="450"></iframe>
         </div>
+        <span id="mobile-warning">Mobile support may be limited.</span>
         <p>Full source code can be found on <a href="https://github.com/GesturTheViking/EliaECSDemo" target="_blank">GitHub</a>.</p>
         <h3>Future improvements</h3>
         <p>These are some improvements to the ECS I would like to implement in the future:</p>
