--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             <br><br>
             I have a huge passion for old movies, which I watch whenever I have spare time and collect on <i>Blu-ray</i>. Other hobbies include listening to progressive rock and jazz, hot beverages and cooking, as well as working on personal projects.
             <br><br>
-            I am looking for a 30-week game programming internship placement starting autumn 2022, where I can continue to learn, grow and widen my ability. <a href="#contact" class="scrollto">Get in touch! I'd love to hear from you.</a>
+            <!-- I am looking for a 30-week game programming internship placement starting autumn 2022, where I can continue to learn, grow and widen my ability.  --><a href="#contact" class="scrollto">Get in touch! I'd love to hear from you.</a>
             <br><br>
             <span id="pdf-links" style="color: #EDB518;">
             <i class="bi bi-file-earmark-person"></i> CV: 
