--- a/princess/index.html
+++ b/princess/index.html
@@ -11,6 +11,9 @@
     <script src="src/recept.js"></script>
     <script src="src/config.js"></script>
     <script src="src/index.js"></script>
+    <script src="src/menu.js"></script>
+    <script src="src/credits.js"></script>
+    <script src="src/pause.js"></script>
 </head>
 <body>
 </body>
