--- a/princess/index.html
+++ b/princess/index.html
@@ -14,7 +14,13 @@
     <script src="src/menu.js"></script>
     <script src="src/credits.js"></script>
     <script src="src/pause.js"></script>
+    <script src="src/highscoreList.js"></script>
 </head>
 <body>
+    <style>
+        img { display: none; }
+    </style>
+    <img src="assets/sprites/ui/bg.png" alt="">
+    <img src="assets/bageri.png" alt="">
 </body>
 </html>
