--- a/princess/index.html
+++ b/princess/index.html
@@ -15,6 +15,7 @@
     <script src="src/credits.js"></script>
     <script src="src/pause.js"></script>
     <script src="src/highscoreList.js"></script>
+    <script src="src/highscoreAdd.js"></script>
 </head>
 <body>
     <style>
