--- a/princess/index.html
+++ b/princess/index.html
@@ -7,7 +7,7 @@
     <title>Stora Prinsessbaket</title>
     <link rel="stylesheet" href="style/index.css">
     <link rel="icon" href="">
-    <script src="lib/phaser.js"></script>
+    <script src="lib/phaser.min.js"></script>
     <script src="src/recept.js"></script>
     <script src="src/config.js"></script>
     <script src="src/index.js"></script>
